# crustcrawler_useful

crustcrawler_mover_utils/: CMakeLists.txt  package.xml
crustcrawler_mover_utils/include/crustcrawler_mover_utils/: crustcrawler_mover.hpp  helpers_methods.hpp  parameters.hpp
crustcrawler_mover_utils/src/: crustcrawler_mover.cpp
crustcrawler_mover_utils/src/libs/: helpers_methods.cpp
crustcrawler_mover_utils/srv/: move_crustcrawler_arm.srv
crustcrawler_with_moveit/: CMakeLists.txt  package.xml
crustcrawler_with_moveit/launch/: crustcrawler_with_moveit.launch
crustcrawler_with_moveit/src/: crustcrawler_test_moveit.cpp
test_crustcrawler_utils/: CMakeLists.txt  package.xml
test_crustcrawler_utils/launch/: test_crustcrawler_utils.launch
test_crustcrawler_utils/launch/params/: global_params.yml
test_crustcrawler_utils/src/: service_user.cpp  test_crustcrawler_utils.cpp
